--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -50,7 +50,7 @@
                         <p>timestamp</p>
                     </div>
                 </div>
-                <div id="email-buttons">
+                <div class="d-flex justify-content-start" id="email-buttons">
                     <button class="btn btn-sm btn-outline-primary" id="reply-btn">Reply</button>
                     <button class="btn btn-sm btn-outline-primary" id="archive-btn">Archive</button>
                     <button class="btn btn-sm btn-outline-primary" id="unarchive-btn">Move to Inbox</button>
