--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -15,3 +15,20 @@ textarea {
 .unreadStyle {
     background-color: white;
 }
+
+.headerStyle {
+    height: 200px;
+}
+
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#email-buttons {
+    margin-top: 1em;
+}
+
+.btn-sm {
+    margin-right: 0.25em;
+}
